Fix vertical alignment of thread buttons

--- a/rsc/css/basic_styles.css
+++ b/rsc/css/basic_styles.css
@@ -66,7 +66,6 @@ abbr {
 pre,
 code {
   -webkit-hyphens: none;
-     -moz-hyphens: none;
       -ms-hyphens: none;
           hyphens: none;
 }
