--- a/rsc/less/bootstrap-evoskins.less
+++ b/rsc/less/bootstrap-evoskins.less
@@ -915,9 +915,6 @@ div.edit_toolbars, div.message_toolbars {
 		}
 		a {
 			display: inline-block;
-			&:last-child {
-				margin-bottom: 0;
-			}
 		}
 	}
 	span.error {
